<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@color/colorPrimary"
    android:padding="@dimen/padding2"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/margin2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin2">

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:layout_weight="1"
            android:text="USA"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textSize3"/>


        <TextView
            android:id="@+id/todayCases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+6584"
            android:textColor="@android:color/white"
            android:textSize="13sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:layout_marginBottom="@dimen/margin2"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Cases"
                    android:textSize="10sp"
                    android:textColor="@android:color/white"
                    android:layout_marginRight="@dimen/margin1"
                    android:layout_marginEnd="@dimen/margin1"/>

                <TextView
                    android:id="@+id/totalCases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="154,354,675"
                    android:textSize="10sp"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Deaths"
                    android:textSize="10sp"
                    android:textColor="@android:color/white"
                    android:layout_marginRight="@dimen/margin1"
                    android:layout_marginEnd="@dimen/margin1"/>

                <TextView
                    android:id="@+id/totalDeaths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="435,435,237"
                    android:textSize="10sp"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Recovered"
                    android:textSize="10sp"
                    android:textColor="@android:color/white"
                    android:layout_marginRight="@dimen/margin1"
                    android:layout_marginEnd="@dimen/margin1"/>

                <TextView
                    android:id="@+id/totalRecovered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="327,725,364"
                    android:textSize="10sp"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
</layout>